err/products.advancedquery.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/AdvancedQuery'...
Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/__init__.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/__init__.py", line 44
    raise ValueError, 'unsupported usage spec: %s' % usage
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AdvancedQuery/doc'...
Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/sorting.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/sorting.py", line 98
    _load = lambda (x1, x2): x2
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AdvancedQuery/tests'...
Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/tests/TestBase.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/tests/TestBase.py", line 48
    id = `id`
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/tests/framework.py", line 72
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/tests/testAdvancedQuery.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/tests/testAdvancedQuery.py", line 76
    for i in range(7,100): self._addObject(folder, i, `i`, None)
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.AdvancedQuery-3.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
